--- a/resultstyle.css
+++ b/resultstyle.css
@@ -17,6 +17,10 @@ body {
       border-radius: 2em;
   }
 
+  .ui[class*="very padded"].segment {
+    padding: 1em;
+}
+
   
   @media only screen and (max-width: 700px) {
     .ui.fixed.menu {
