--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   display: none!important;
 }
 
+i {
+	padding-left: 0.5em;
+ } 
 
 .masthead h1.ui.header {
   margin-top: 2em;
@@ -25,7 +28,6 @@ body {
 .ui[class*="very padded"].segment {
   padding: 1em;
 }
-
   
 @media only screen and (max-width: 700px) {
   .ui.fixed.menu {
