Updated font style and button styles. Adj. container placement

--- a/resultstyle.css
+++ b/resultstyle.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-image: url("https://images.pexels.com/photos/1008155/pexels-photo-1008155.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
    }
    
@@ -39,4 +39,4 @@ body {
       margin-top: 0.5em;
       font-size: 1.5em;
     }
-  }
+  } */
